# aws-k8s-storage

./: CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml
src/: charm.py  config.py  requires_certificates.py  storage_manifests.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/data/: charm.yaml  kube_control_data.yaml
tests/integration/: conftest.py  test_aws_cloud_provider.py
tests/unit/: test_charm.py
upstream/: update.py
upstream/cloud_provider/manifests/v1.22.0/: kustomized.yaml
upstream/cloud_provider/manifests/v1.22.1/: kustomized.yaml
upstream/cloud_provider/manifests/v1.22.2/: kustomized.yaml
upstream/cloud_provider/manifests/v1.22.3/: kustomized.yaml
upstream/cloud_provider/manifests/v1.22.4/: kustomized.yaml
upstream/cloud_provider/manifests/v1.23.0/: kustomized.yaml
upstream/cloud_provider/manifests/v1.23.1/: kustomized.yaml
upstream/cloud_provider/manifests/v1.23.2/: kustomized.yaml
upstream/cloud_provider/manifests/v1.24.0/: kustomized.yaml
upstream/cloud_provider/manifests/v1.24.1/: kustomized.yaml
upstream/cloud_provider/manifests/v1.25.0/: kustomized.yaml
upstream/cloud_storage/manifests/v1.10.0/: kustomized.yaml
upstream/cloud_storage/manifests/v1.11.0/: kustomized.yaml
upstream/cloud_storage/manifests/v1.11.1/: kustomized.yaml
upstream/cloud_storage/manifests/v1.11.2/: kustomized.yaml
upstream/cloud_storage/manifests/v1.11.3/: kustomized.yaml
(+46 files in other folders)
